--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,148 @@
 .App {
-  text-align: center;
+	text-align: center;
+	font-family: "Poppins";
+	font-style: normal;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.navbar {
+	display: flex;
+	height: 70px;
+	box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+	align-content: left;
+	align-items: center;
+}
+
+.nav-logo {
+	margin-left: 30px;
+  width: 82px;
+	max-width: 100px;
+  max-height: auto;
+}
+
+.collage-div {
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	margin: 26px 77px;
+	max-width: 100%;
+	height: auto;
+}
+
+.collage {
+	max-width: 75vh;
+}
+
+.collage-text {
+	margin: 26px 77px;
+	text-align: left;
+}
+
+.collage-text > h1 {
+	font-size: 36px;
+	line-height: 110%;
+	font-weight: 600;
+	margin-bottom: 16px;
+}
+
+.collage-text > p {
+	max-width: 320px;
+	font-weight: 300;
+	font-size: 16px;
+	line-height: 110%;
+	margin-top: 0px;
+}
+
+.cards-list {
+	max-width: 85vh;
+	display: flex;
+	flex-wrap: nowrap;
+	gap: 20px;
+	overflow-x: auto;
+	padding: 20px;
+}
+
+.card {
+	width: 175px;
+	font-size: 12px;
+	flex: 0 0 auto;
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+	position: relative;
+}
+
+.card--image {
+	width: 100%;
+	border-radius: 9px;
+	margin-bottom: 9px;
+}
+
+.card--title {
+	overflow: hidden;
+text-overflow: ellipsis;	margin-bottom: 0px;
+  font-weight: 300;
+font-size: 12px;
+line-height: 110%;
+}
+
+.card--stats {
+	display: flex;
+	align-items: center;
+}
+
+.card--star {
+	height: 14px;
+}
+
+.card--price {
+	margin-top: auto;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.card--badge {
+	position: absolute;
+	top: 6px;
+	left: 6px;
+	background-color: white;
+	padding: 5px 7px;
+	border-radius: 2px;
+	font-weight: bold;
 }
